added text main to chech goto-

--- a/index.html
+++ b/index.html
@@ -65,6 +65,64 @@
         </div>
     </header>
 
+    <div class="wrapper">
+        <main class="page">
+            <section class="page__section page__section1">
+                <h1 class="page__title">Page title</h1>
+                <div class="page__text">
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab, unde. Quasi consequatur dicta atque quis vitae voluptatem asperiores ab autem.</p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab, unde. Quasi consequatur dicta atque quis vitae voluptatem asperiores ab autem.</p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab, unde. Quasi consequatur dicta atque quis vitae voluptatem asperiores ab autem.</p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab, unde. Quasi consequatur dicta atque quis vitae voluptatem asperiores ab autem.</p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab, unde. Quasi consequatur dicta atque quis vitae voluptatem asperiores ab autem.</p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab, unde. Quasi consequatur dicta atque quis vitae voluptatem asperiores ab autem.</p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab, unde. Quasi consequatur dicta atque quis vitae voluptatem asperiores ab autem.</p>
+                </div>
+            </section>
+            <section class="page__section page__section2">
+                <h1 class="page__title">Page title</h1>
+                <div class="page__text">
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab, unde. Quasi consequatur dicta atque quis vitae voluptatem asperiores ab autem.</p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab, unde. Quasi consequatur dicta atque quis vitae voluptatem asperiores ab autem.</p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab, unde. Quasi consequatur dicta atque quis vitae voluptatem asperiores ab autem.</p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab, unde. Quasi consequatur dicta atque quis vitae voluptatem asperiores ab autem.</p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab, unde. Quasi consequatur dicta atque quis vitae voluptatem asperiores ab autem.</p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab, unde. Quasi consequatur dicta atque quis vitae voluptatem asperiores ab autem.</p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab, unde. Quasi consequatur dicta atque quis vitae voluptatem asperiores ab autem.</p>
+                </div>
+            </section>
+            <section class="page__section page__section3">
+                <h1 class="page__title">Page title</h1>
+                <div class="page__text">
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab, unde. Quasi consequatur dicta atque quis vitae voluptatem asperiores ab autem.</p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab, unde. Quasi consequatur dicta atque quis vitae voluptatem asperiores ab autem.</p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab, unde. Quasi consequatur dicta atque quis vitae voluptatem asperiores ab autem.</p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab, unde. Quasi consequatur dicta atque quis vitae voluptatem asperiores ab autem.</p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab, unde. Quasi consequatur dicta atque quis vitae voluptatem asperiores ab autem.</p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab, unde. Quasi consequatur dicta atque quis vitae voluptatem asperiores ab autem.</p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab, unde. Quasi consequatur dicta atque quis vitae voluptatem asperiores ab autem.</p>
+                </div>
+            </section>
+            <section class="page__section page__section4">
+                <h1 class="page__title">Page title</h1>
+                <div class="page__text">
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab, unde. Quasi consequatur dicta atque quis vitae voluptatem asperiores ab autem.</p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab, unde. Quasi consequatur dicta atque quis vitae voluptatem asperiores ab autem.</p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab, unde. Quasi consequatur dicta atque quis vitae voluptatem asperiores ab autem.</p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab, unde. Quasi consequatur dicta atque quis vitae voluptatem asperiores ab autem.</p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab, unde. Quasi consequatur dicta atque quis vitae voluptatem asperiores ab autem.</p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab, unde. Quasi consequatur dicta atque quis vitae voluptatem asperiores ab autem.</p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab, unde. Quasi consequatur dicta atque quis vitae voluptatem asperiores ab autem.</p>
+                </div>
+            </section>
+        </main>
+    </div>
+        
+        
+
+
+
+
     <script src="javascripts/scripts.js"></script>
 
 </body>
