--- a/index.html
+++ b/index.html
@@ -22,43 +22,43 @@
                 </div>  
                 <nav class="menu__body">
                     <ul class="menu__list">
-                        <li><a data-goto=".hoome1" href="#page1"  class="menu__link">Page 1</a></li>
-                        <li><a data-goto=".hoome3" href="#page2"  class="menu__link">Page 2</a></li>
-                        <li><a data-goto=".hoome4" href="#page3"  class="menu__link">Page 3</a></li>
+                        <li><a data-goto=".page__section1" href="#page1"  class="menu__link">Page 1</a></li>
+                        <li><a data-goto=".page__section2" href="#page2"  class="menu__link">Page 2</a></li>
+                        <li><a data-goto=".page__section3" href="#page3"  class="menu__link">Page 3</a></li>
                         <li>
-                           <a data-goto=".hoome1" href="#page4" class="menu__link">Pages 1+</a>
+                           <a data-goto=".page__section4" href="#page4" class="menu__link">Pages 1+</a>
                            <span class="menu__arrow"></span>
                            <span class="menu__arrowfalse"></span>
                            <ul class="menu__sub-list">
                             <li>
-                                <a href="" class="menu__sub-link">Page 1</a>
+                                <a data-goto=".page__section1" href="" class="menu__sub-link">Page 1</a>
                             </li>
                             <li>
-                                <a href="" class="menu__sub-link">Page 2</a>
+                                <a data-goto=".page__section2" href="" class="menu__sub-link">Page 2</a>
                              </li>
                              <li>
-                                <a href="" class="menu__sub-link">Page 3</a>
+                                <a data-goto=".page__section3" href="" class="menu__sub-link">Page 3</a>
                              </li>
                            </ul>
                         </li>
-                        <li><a data-goto=".hoome1" href="#page5"  class="menu__link">Page 4</a></li>
+                        <li><a data-goto=".page__section1" href="#page5"  class="menu__link">Page 4</a></li>
                         <li>
-                            <a data-goto=".hoome2" href="#page6" class="menu__link">Pages 2+</a>
+                            <a data-goto=".page__section2" href="#page6" class="menu__link">Pages 2+</a>
                             <span class="menu__arrow"></span>
                             <span class="menu__arrowfalse"></span>
                             <ul class="menu__sub-list">
                              <li>
-                                 <a href="" class="menu__sub-link">Page 1</a>
+                                 <a data-goto=".page__section4" href="" class="menu__sub-link">Page 1</a>
                              </li>
                              <li>
-                                 <a href="" class="menu__sub-link">Page 2</a>
+                                 <a data-goto=".page__section1" href="" class="menu__sub-link">Page 2</a>
                               </li>
                               <li>
-                                 <a href="" class="menu__sub-link">Page 3</a>
+                                 <a data-goto=".page__section2" href="" class="menu__sub-link">Page 3</a>
                               </li>
                             </ul>
                         </li>
-                        <li><a data-goto=".hoome3" href="#page7"  class="menu__link">Page 5</a></li>
+                        <li><a data-goto=".page__section3" href="#page7"  class="menu__link">Page 5</a></li>
                     </ul>
                 </nav>        
             </div>
