--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
 <body>
     <header class="header">
         <div class="header__container">
-            <a href="index.html" class="header__logo"></a>
+            <a href="index.html" class="header__logo">
+              <span class="logo__text">Pixel</span>
+            </a>
             <div class="header__menu menu">
                 <div class="menu__icon">
                     <span></span>
@@ -170,7 +172,7 @@
         <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
     </p>
   
-  </div>
+  </div> 
 
       </div>
         
