--- a/index.html
+++ b/index.html
@@ -131,8 +131,8 @@
 
 
         <div class="nav_col">
-          <div class="nav__section">
-            <h2 class="footer-heading ">Features</h2>
+          <div class="nav__section__one">
+            <h2 class="footer-heading ">Features </h2>
             <ul class="">
               <li><a href="#">About Us</a></li>
               <li><a href="#">Testimonials</a></li>
@@ -141,8 +141,8 @@
               <li><a href="#">Contact Us</a></li>
             </ul>
           </div>
-          <div class="nav__section">
-            <h2 class="footer-heading ">Features2</h2>
+          <div class="nav__section__two">
+            <h2 class="footer-heading ">Menu</h2>
             <ul class="">
               <li><a href="#">About Us</a></li>
               <li><a href="#">Testimonials</a></li>
