swiper like news

--- a/index.html
+++ b/index.html
@@ -95,12 +95,13 @@
         <div class="swiper_box">
           <nav class="swiper-container">
             <ul class="swiper-wrapper">
-                 <li class="swiper-slide"><a href="" target="_blank">Вузы</a></li>
-                 <li class="swiper-slide"><a href="" target="_blank">Колледжи</a></li>
-                 <li class="swiper-slide"><a href="" target="_blank">Техникумы</a></li>
-                 <li class="swiper-slide"><a href="" target="_blank">Училища</a></li>
-                 <li class="swiper-slide">
+                 <li class="swiper-slide "><a href="" target="_blank">Вузы</a></li>
+                 <li class="swiper-slide "><a href="" target="_blank">Колледжи</a></li>
+                 <li class="swiper-slide "><a href="" target="_blank">Техникумы</a></li>
+                 <li class="swiper-slide "><a href="" target="_blank">Училища</a></li>
+                 <li class="swiper-slide ">
                      <a href="" class="li-a">Специальности</a>
+                     <span class="menu__arrowfalseblack"></span>
                      <ul class="menu__sub-listt">
                          <li>
                              <a href="" class="menu__sub-linkk">Высшее</a>
@@ -110,10 +111,11 @@
                          </li>
                      </ul>
                  </li>
-                 <li class="swiper-slide"><a href="" target="_blank">Профессии</a></li>
-                 <li class="swiper-slide"><a href="" target="_blank">Отзывы</a></li>
-                 <li class="swiper-slide">
+                 <li class="swiper-slide "><a href="" target="_blank">Профессии</a></li>
+                 <li class="swiper-slide "><a href="" target="_blank">Отзывы</a></li>
+                 <li class="swiper-slide ">
                      <a href="" class="li-a">Учебные заведения</a>
+                     <span class="menu__arrowfalseblack"></span>
                      <ul class="menu__sub-listt">
                          <li>
                              <a href="" class="menu__sub-linkk">Дистанционные колледжи</a>
@@ -123,14 +125,14 @@
                          </li>
                      </ul>
                  </li>
-                 <li class="swiper-slide"><a href="" target="_blank">Тест на профориентацию</a></li>
-                 <li class="swiper-slide"><a href="" target="_blank">Курсы</a></li>
-                 <li class="swiper-slide"><a href="" target="_blank">Отзывы</a></li>
-                 <li class="swiper-slide"><a href="" target="_blank">Отзывы</a></li>
+                 <li class="swiper-slide "><a href="" target="_blank">Тест на профориентацию</a></li>
+                 <li class="swiper-slide "><a href="" target="_blank">Курсы</a></li>
+                 <li class="swiper-slide "><a href="" target="_blank">Отзывы</a></li>
+                 <li class="swiper-slide "><a href="" target="_blank">Отзывы</a></li>
             </ul>
         </nav>
-        <div class="swiper-button-next"></div>
-        <div class="swiper-button-prev"></div>
+        <div class="swiper-button-next "></div>
+        <div class="swiper-button-prev "></div>
         </div>
         </div>
           
