--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                     <ul class="menu__list">
                         <li><a data-goto=".page__section1" href="#page1"  class="menu__link">HOME</a></li>
                         <li><a data-goto=".page__section2" href="#page2"  class="menu__link">PAGES</a></li>
-                        <li><a data-goto=".page__section3" href="#page3"  class="menu__link">BLOG</a></li>
+                        <li><a data-goto=".page__section3" href="#page3"  class="menu__link">PORTFOLIO</a></li>
                         <li>
                            <a data-goto=".page__section4" href="#page4" class="menu__link">ELEMENTS</a>
                            <span class="menu__arrow"></span>
