--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
           </div>
         </div>
         <div class="paragraph__section flex_center">
-          <h2 class="footer-heading mb-4">Some Paragraph</h2>
+          <h2 class="footer-heading mb-4">Some awesome stuff !</h2>
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repellat nostrum libero iusto dolorum vero atque aliquid.</p>
         </div>
         <div class="subscribe__section flex_center">
