If you want to be success in your life or be in the top of the game you need to do the things that nobody is willing to do

--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
         </div>
         <div class="paragraph__section flex_center">
           <h2 class="footer-heading mb-4">Some awesome stuff !</h2>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repellat nostrum libero iusto dolorum vero atque aliquid.</p>
+          <p>If you want to be success in your life or be in the top of the game you need to do the things that nobody is willing to do.</p>
         </div>
         <div class="subscribe__section flex_center">
           <h2 class="footer-heading">Subscribe to Newsletter</h2>
