--- a/pages/subpages/wow-grid.html
+++ b/pages/subpages/wow-grid.html
@@ -198,9 +198,9 @@
         
             <div class="deer-container">
               <img class="deer deerimg" src="../../img/Screenshot_6.png" alt="deer">
-              <img class="deer__logo1 deerimg" src="../img/logo.png" alt="logo1">
-              <img class="deer__logo2 deerimg" src="../img/logo.png" alt="deer2">
-              <img class="deer__logo3 deerimg" src="../img/logo.png" alt="deer3">
+              <img class="deer__logo1 deerimg" src="../../img/logo.png" alt="logo1">
+              <img class="deer__logo2 deerimg" src="../../img/logo.png" alt="deer2">
+              <img class="deer__logo3 deerimg" src="../../img/logo.png" alt="deer3">
             </div>
             <div class="content">
               <h1>Some Paragraph</h1>
