loading-lazy script

--- a/index.html
+++ b/index.html
@@ -147,16 +147,16 @@
           <h1>loading-lazy__box</h1>
           <ul class="loading-lazy__ul">
             <li class="loading-lazy__li">
-              <img data-src="img/image__three.jpg" alt="some-image">
+              <img data-src="img/image__three.jpg" src="img/1x1.png" alt="some-image">
             </li>
             <li class="loading-lazy__li">
-              <img data-src="img/image__three.jpg" alt="some-image">
+              <img data-src="img/image__three.jpg" src="img/1x1.png" alt="some-image">
             </li>
             <li class="loading-lazy__li">
-              <img data-src="img/image__three.jpg" alt="some-image">
+              <img data-src="img/image__three.jpg" src="img/1x1.png" alt="some-image">
             </li>
             <li class="loading-lazy__li">
-              <img data-src="img/image__three.jpg" alt="some-image">
+              <img data-src="img/image__three.jpg" src="img/1x1.png" alt="some-image">
             </li>
 
           </ul>
