Lazy Loading Images with JavaScript Intersection Observer v.1.0

--- a/index.html
+++ b/index.html
@@ -127,7 +127,8 @@
     <section class="loading-lazy__section">
       <div class="loading-lazy__container">
         <div class="loading-lazy__box">
-          <h1>Lazy Loading Images with JavaScript Intersection Observer</h1>
+          <h1>Lazy Loading Images with JavaScript Intersection Observer +<br>
+            Reveal Elements On Scroll JavaScript Intersection Observer</h1>
           <ul class="loading-lazy__ul">
             <li class="loading-lazy__li">
               <img class="imglazy" data-src="img/image__three.jpg" src="img/1x1.png" alt="some-image">
@@ -141,7 +142,20 @@
             <li class="loading-lazy__li">
               <img class="imglazy" data-src="img/image__three.jpg" src="img/1x1.png" alt="some-image">
             </li>
-
+          </ul>
+          <ul class="loading-lazy__ul">
+            <li class="loading-lazy__li">
+              <img class="imglazy" data-src="img/image__three.jpg" src="img/1x1.png" alt="some-image">
+            </li>
+            <li class="loading-lazy__li">
+              <img class="imglazy" data-src="img/image__three.jpg" src="img/1x1.png" alt="some-image">
+            </li>
+            <li class="loading-lazy__li">
+              <img class="imglazy" data-src="img/image__three.jpg" src="img/1x1.png" alt="some-image">
+            </li>
+            <li class="loading-lazy__li">
+              <img class="imglazy" data-src="img/image__three.jpg" src="img/1x1.png" alt="some-image">
+            </li>
           </ul>
 
         </div>
