swiper-slider 3d is in progress

--- a/index.html
+++ b/index.html
@@ -122,15 +122,25 @@
     <main class="main__container">
      
     <section class="swiper-slider">
-      <h2 class="swiper-slider__header">3D Slider<span>-Swiper</span></h2>
+      <h2 class="swiper-slider__header">3D Swiper<span>-Slider</span></h2>
       <div class="swiper-slider__wrapper">
         <div class="swiper-slider__container">
-
+          <div class="swiper-carousel">
+            <div class="swiper-wrapper">
+              <div class="swiper-slide swiper-carousel__item">
+                <div class="swiper-carousel__image-wrapper">
+                  <div class="swiper-carousel__image-left">
+                    <div class="swiper-carousel__image" style="background-image: url(swiper-slider/img/1.png);"></div>
+                  </div>
+                  <div class="swiper-carousel__image-right">
+                    <div class="swiper-carousel__image" style="background-image: url(swiper-slider/img/1.png);"></div>
+                  </div>
+                </div>
+                <p>Medusa</p> 
+              </div>
+            </div>
+          </div>
         </div>
-
-
-
-
       </div>
 
 
