swiper-slider 3d is done

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                               <li class="sub-list__li-tag">
                                   <a data-goto=".page__section1" href="" class="menu__sub-link__title">GENERAL ELEMENTS</a>
                                   <ul class="menu__sub-list__down">
-                                    <li><a href="pages/subpages/wow-grid.html" data-goto=".page__section1" href="" class="menu__sub-link">wow grid</a></li>
+                                    <li><a href="" data-goto=".page__section1" href="" class="menu__sub-link">Page 1</a></li>
                                     <li><a data-goto=".page__section1" href="" class="menu__sub-link">Page 1</a></li>
                                     <li><a data-goto=".page__section1" href="" class="menu__sub-link">Page 1</a></li>
                                     <li><a data-goto=".page__section1" href="" class="menu__sub-link">Page 1</a></li>
@@ -74,7 +74,7 @@
                             <li class="sub-list__li-tag">
                               <a data-goto=".page__section1" href="" class="menu__sub-link__title">GENERAL ELEMENTS</a>
                               <ul class="menu__sub-list__down">
-                                <li><a data-goto=".page__section1" href="" class="menu__sub-link">Page 1</a></li>
+                                <li><a href="pages/subpages/3D Swiper-Slider(CSSLESS).html" data-goto=".page__section1" class="menu__sub-link">3D Swiper-Slider(CSSLESS)</a></li>
                                 <li><a data-goto=".page__section1" href="" class="menu__sub-link">Page 1</a></li>
                                 <li><a data-goto=".page__section1" href="" class="menu__sub-link">Page 1</a></li>
                                 <li><a data-goto=".page__section1" href="" class="menu__sub-link">Page 1</a></li>
