--- a/pages/subpages/3D Swiper-Slider(CSSLESS).html
+++ b/pages/subpages/3D Swiper-Slider(CSSLESS).html
@@ -79,9 +79,9 @@
                               <a data-goto=".page__section1" href="" class="menu__sub-link__title">GENERAL ELEMENTS</a>
                               <ul class="menu__sub-list__down">
                                 <li><a href="../../pages/subpages/3D Swiper-Slider(CSSLESS).html" data-goto=".page__section1" class="menu__sub-link">3D Swiper-Slider(CSSLESS)</a></li>
-                                <li><a data-goto=".page__section1" href="" class="menu__sub-link">Page 1</a></li>
-                                <li><a data-goto=".page__section1" href="" class="menu__sub-link">Page 1</a></li>
-                                <li><a data-goto=".page__section1" href="" class="menu__sub-link">Page 1</a></li>
+                                <li><a href="../../pages/subpages/grid layout.html" data-goto=".page__section1" class="menu__sub-link">grid layout</a></li>
+                                <li><a href="../../pages/subpages/SVG Icon Animation.html" data-goto=".page__section1" class="menu__sub-link">SVG Icon Animation</a></li>
+                                <li><a href="../../pages/subpages/SVG Icon Animation.html" data-goto=".page__section1" class="menu__sub-link">Flying SVG Animation</a></li>
                                 <li><a data-goto=".page__section1" href="" class="menu__sub-link">Page 1</a></li>
                                 <li><a data-goto=".page__section1" href="" class="menu__sub-link">Page 1</a></li>
                                 <li><a data-goto=".page__section1" href="" class="menu__sub-link">Page 1</a></li>
