footer like elementor.com footer is being built

--- a/index.html
+++ b/index.html
@@ -279,13 +279,20 @@
               <a class="column__footer-four-a">Link</a>
               <a class="column__footer-four-a">Link</a>
               <a class="column__footer-four-a">Link</a>
-              <a class="column__footer-four-a">Link</a>
-              <a class="column__footer-four-a">Link</a>
-              <a class="column__footer-four-a">Link</a>
-              <a class="column__footer-four-a">Link</a>
-              <a class="column__footer-four-a">Link</a>
             </div>
           </div>
+          <div class="column__footer-five">
+            <h4 class="column__footer-five-title">Column-four</h4>
+            <div class="column__footer-five-elements column">
+              <a class="column__footer-five-a">Link</a>
+              <a class="column__footer-five-a">Link</a>
+              <a class="column__footer-five-a">Link</a>
+              <a class="column__footer-five-a">Link</a>
+              <a class="column__footer-five-a">Link</a>
+            </div>
+          </div>
+
+
          
         <div class="paragraph__footer">
           <h4 class="paragraph__footer-heading mb-4">Some Paragraph</h4>
@@ -294,13 +301,13 @@
         </div>
 
         <div class="subscribe__footer">
-          <h4 class="subscribe__footer-heading">Subscribe to Newsletter</h4>
+          <h4 class="subscribe__footer-heading">Subscribe To Our Newsletter</h4>
           <div class="subscribe__footer-placeholder">
             <form action="#" method="post">
               <div class="subscribe__footer-input">
-                  <input type="text" class="" placeholder="Enter Email" aria-label="Enter Email" aria-describedby="button-addon2">
-                  <div class="">
-                    <button class="subscribe__footer-button svg_icons_css" type="button" id=""> <img src="style/paper-plane-regular.svg" alt="My Happy SVG" /></button>
+                  <input type="text" class="subscribe__footer__input" placeholder="Enter your email address" aria-label="Enter your email address" aria-describedby="button-addon2">
+                  <div class="subscribe__footer__button">
+                    <button class="subscribe__footer-button svg_icons_css" type="button" id="">Subscribe</button>
                   </div>
               </div>
             </form>
@@ -308,12 +315,15 @@
         </div>
         
         <div class="follow__footer">
-          <h4 class="follow__footer-heading">Follow Us</h4>
           <div class="follow__footer-icons">
             <a href="#about-section" class="follow__footer-svg"><img src="style/icons8-youtube-logo.svg" alt="My Happy SVG" /></a>
             <a href="#" class="follow__footer-svg"><img src="style/icons8-facebook (1).svg" alt="My Happy SVG" /></a>
             <a href="#" class="follow__footer-svg"><img src="style/icons8-twitter (1).svg" alt="My Happy SVG" /></a>
-            <a href="#" class="follow__footer-svg"><img src="style/paper-plane-regular.svg" alt="My Happy SVG" /></a>
+            <a href="#" class="follow__footer-svg"><img src="style/icons8-twitter (1).svg" alt="My Happy SVG" /></a>
+            <a href="#about-section" class="follow__footer-svg"><img src="style/icons8-youtube-logo.svg" alt="My Happy SVG" /></a>
+            <a href="#" class="follow__footer-svg"><img src="style/icons8-facebook (1).svg" alt="My Happy SVG" /></a>
+            <a href="#" class="follow__footer-svg"><img src="style/icons8-twitter (1).svg" alt="My Happy SVG" /></a>
+            <a href="#" class="follow__footer-svg"><img src="style/icons8-twitter (1).svg" alt="My Happy SVG" /></a>
           </div>   
         </div>
 
