https://themepixel.github.io/PSDtoHTML.WITH.LESS.CSS.EXOTICO./

--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
               <img class="imglazy" data-src="img/image__three.jpg" src="img/1x1.png" alt="some-image">
             </div >
             <div  class="loading-lazy__li three ">
-              <img class="imglazy" data-src="img/psd_slide.jpg" src="img/1x1.png" alt="some-image">
+              <a href="https://themepixel.github.io/PSDtoHTML.WITH.LESS.CSS.EXOTICO./"><img class="imglazy" data-src="img/psd_slide.jpg" src="img/1x1.png" alt="some-image"></a>
             </div >
             <div  class="loading-lazy__li four ">
               <img class="imglazy" data-src="img/image__three.jpg" src="img/1x1.png" alt="some-image">
