--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta
     name="viewport"
     content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1">
-    <link rel="stylesheet" href="style/main.css">
+    <link rel="stylesheet"1 href="style/main.css">
     <link rel="stylesheet" href="swiper-slider/swiper-bundle.min.css">  
   </head>
 
@@ -21,7 +21,7 @@
           
             <a href="index.html" class="header__logo">
              
-              <span class="logo__text">Pixel</span>
+              <span class="logo__text">Invok</span>
               <svg class="svg__logo" id="Layer_1" data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" 
               viewBox="0 0 370.6 94.6">
               <polyline class="draw" points="32.5 94.1 32.5 9.3 0.5 9.3 0.5 0.5 72.5 0.5 72.5 7.7 40.5 9.3 40.5 94.1 81.3 94.1 81.3 9.3 88.5 9.3 88.5 39.6 120.5 39.6 120.5 47.3 120.5 94.1 112.5 94.1 112.5 47.3 88.5 47.3 88.5 94.1 144.5 94.1 144.5 39.6 144.5 6.1 152.5 6.1 183.7 6.9 183.7 14.9 153.3 14.1 153.3 39.6 183.7 39.6 183.7 47.3 153.3 47.3 152.5 86.1 183.7 86.1 183.7 94.1 151.7 94.1 203.7 94.1 203.7 39.6 203.7 9.3 293.3 9.3 293.3 82.9 293.3 94.1 281.3 94.1 281.3 19.7 251.7 19.7 251.7 90.1 239.7 90.1 239.7 18.9 210.9 18.9 210.9 94.1 314.1 94.1 314.1 8.5 370.1 7.7 370.1 17.3 327.7 17.3 326.9 39.6 370.1 39.6 370.1 47.3 328.5 47.3 328.5 88.5 370.1 88.5 370.1 94.1 320.5 94.1" 
@@ -193,37 +193,33 @@
         <div class="loading-lazy__box">
           <h1>Lazy Loading Images with JavaScript Intersection Observer +<br>
             Reveal Elements On Scroll JavaScript Intersection Observer</h1>
-          <ul class="loading-lazy__ul">
-            <li class="loading-lazy__li">
+          <div  class="loading-lazy__ul">
+            <div  class="loading-lazy__li one ">
               <img class="imglazy" data-src="img/image__three.jpg" src="img/1x1.png" alt="some-image">
-            </li>
-            <li class="loading-lazy__li">
+            </div >
+            <div  class="loading-lazy__li two ">
               <img class="imglazy" data-src="img/image__three.jpg" src="img/1x1.png" alt="some-image">
-            </li>
-            <li class="loading-lazy__li">
+            </div >
+            <div  class="loading-lazy__li three ">
               <img class="imglazy" data-src="img/image__three.jpg" src="img/1x1.png" alt="some-image">
-            </li>
-            <li class="loading-lazy__li">
+            </div >
+            <div  class="loading-lazy__li four ">
               <img class="imglazy" data-src="img/image__three.jpg" src="img/1x1.png" alt="some-image">
-            </li>
-          </ul>
-          <ul class="loading-lazy__ul">
-            <li class="loading-lazy__li">
+            </div >
+            <div  class="loading-lazy__li five ">
               <img class="imglazy" data-src="img/image__three.jpg" src="img/1x1.png" alt="some-image">
-            </li>
-            <li class="loading-lazy__li">
+            </div >
+            <div  class="loading-lazy__li six ">
               <img class="imglazy" data-src="img/image__three.jpg" src="img/1x1.png" alt="some-image">
-            </li>
-            <li class="loading-lazy__li">
+            </div >
+            <div  class="loading-lazy__li seven ">
               <img class="imglazy" data-src="img/image__three.jpg" src="img/1x1.png" alt="some-image">
-            </li>
-            <li class="loading-lazy__li">
+            </div >
+            <div  class="loading-lazy__li eight ">
               <img class="imglazy" data-src="img/image__three.jpg" src="img/1x1.png" alt="some-image">
-            </li>
-          </ul>
-
+            </div >
+          </div >
         </div>
-
       </div>
     </section>
 
