previous works v.1.0 @media only screen

--- a/index.html
+++ b/index.html
@@ -34,10 +34,10 @@
                 <nav class="menu__body">
                     <ul class="menu__list">
                         <li><a data-goto=".page__section1" href="index.html"  class="menu__link">HOME</a></li>
-                        <li><a data-goto=".page__section2" href="pages/pages.html"  class="menu__link">PAGES</a></li>
+                        <li><a data-goto=".page__section2" href="pages/pages.html"  class="menu__link">SHOP</a></li>
                         <li><a data-goto=".page__section3" href="pages/portfolio.html"  class="menu__link">PORTFOLIO</a></li>
                         <li>
-                           <a data-goto=".page__section4" href="pages/elements.html" class="menu__link">ELEMENTS</a>
+                           <a data-goto=".page__section4" href="pages/elements.html" class="menu__link">MY SKILLS</a>
                            <span class="menu__arrow"></span>
                            <span class="menu__arrowfalse"></span>
                            <div class="mega-menu_section">
