../fonts/DMSans-Regular.woff2

--- a/index.html
+++ b/index.html
@@ -309,7 +309,7 @@
          
         <div class="paragraph__footer">
           <h4 class="paragraph__footer-heading mb-4">Some Paragraph</h4>
-          <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Adipisci mollitia iusto aliquam corrupti quia esse porro magni, omnis et itaque nobis, cum officia alias illum nihil aspernatur impedit?</p>
+          <p class="paragraph__footer-p">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Adipisci mollitia iusto aliquam corrupti quia esse porro magni, omnis et itaque nobis, cum officia alias illum nihil aspernatur impedit?</p>
         </div>
 
         <div class="subscribe__footer">
