--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
           
             <a href="index.html" class="header__logo">
              
-              <span class="logo__text">Invok</span>
+              <span class="logo__text">Invoke</span>
               <svg class="svg__logo" id="Layer_1" data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" 
               viewBox="0 0 370.6 94.6">
               <polyline class="draw" points="32.5 94.1 32.5 9.3 0.5 9.3 0.5 0.5 72.5 0.5 72.5 7.7 40.5 9.3 40.5 94.1 81.3 94.1 81.3 9.3 88.5 9.3 88.5 39.6 120.5 39.6 120.5 47.3 120.5 94.1 112.5 94.1 112.5 47.3 88.5 47.3 88.5 94.1 144.5 94.1 144.5 39.6 144.5 6.1 152.5 6.1 183.7 6.9 183.7 14.9 153.3 14.1 153.3 39.6 183.7 39.6 183.7 47.3 153.3 47.3 152.5 86.1 183.7 86.1 183.7 94.1 151.7 94.1 203.7 94.1 203.7 39.6 203.7 9.3 293.3 9.3 293.3 82.9 293.3 94.1 281.3 94.1 281.3 19.7 251.7 19.7 251.7 90.1 239.7 90.1 239.7 18.9 210.9 18.9 210.9 94.1 314.1 94.1 314.1 8.5 370.1 7.7 370.1 17.3 327.7 17.3 326.9 39.6 370.1 39.6 370.1 47.3 328.5 47.3 328.5 88.5 370.1 88.5 370.1 94.1 320.5 94.1" 
@@ -345,7 +345,7 @@
         </div>
 
         <div class="copyright__footer">
-          <p>© Invok. All rights reserved</p>
+          <p>© Invoke. All rights reserved</p>
         </div> 
 
 
