--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
             Reveal Elements On Scroll JavaScript Intersection Observer</h1>
           <div class="loading-lazy__ul">
             <div id="container" class="loading-lazy__li one ">
-              <a href="https://themepixel.github.io/Portfolio_HTML/"><img class="imglazy" data-src="img/psd_slide.jpg" src="img/1x1.png" alt="some-image"></a>
+              <a href="https://themepixel.github.io/PSDtoHTML.WITH.LESS.CSS.EXOTICO./"><img class="imglazy" data-src="img/psd_slide.jpg" src="img/1x1.png" alt="some-image"></a>
             </div >
             <div id="container" class="loading-lazy__li two ">
               <a href="https://themepixel.github.io/Portfolio_HTML/"><img class="imglazy" data-src="img/portfolio.jpg" src="img/1x1.png" alt="some-image"></a>
