--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta
     name="viewport"
     content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1">
-    <link rel="stylesheet"1 href="style/main.css">
+    <link rel="stylesheet" href="style/main.css">
     <link rel="stylesheet" href="swiper-slider/swiper-bundle.min.css">  
   </head>
 
