--- a/index.html
+++ b/index.html
@@ -137,7 +137,9 @@
         <div class="loading-lazy__box">
           <h2>My previous recent works:</h2>
             <h1>Lazy Loading Images with JavaScript Intersection Observer +<br>
-            Reveal Elements On Scroll JavaScript Intersection Observer</h1>
+            Reveal Elements On Scroll JavaScript Intersection Observer+<br>
+            Load More Button
+          </h1>
             
               <div class="loading-lazy__ul">
 
